plugins {
	id "java"
	id "idea"
	id "jacoco"
	alias libs.plugins.postCompileWeaving
}

repositories {
	mavenCentral()
}

dependencies {
	implementation libs.bundles.awsLambda,
			project(":libs:common-services"),
			project(":libs:audit-service"),
			project(":libs:journey-uris"),
			project(":libs:verifiable-credentials"),
			project(":libs:user-identity-service")

	aspect libs.powertoolsLogging,
			libs.powertoolsTracing,
			libs.aspectj

	testImplementation libs.junitJupiter,
			libs.mockitoJunit,
			project(path: ':libs:common-services', configuration: 'tests')

	testRuntimeOnly(libs.junitPlatform)
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

test {
	// Configures environment variable to avoid initialization of AWS X-Ray segments for each tests
	environment "LAMBDA_TASK_ROOT", "handler"
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required.set(true)
	}
}
